--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "atom-dark-ui",
+  "name": "nuance-dark-ui",
   "theme": "ui",
-  "version": "0.26.0",
-  "description": "Default dark theme for interface components",
+  "version": "0.1.0",
+  "description": "Subtle earthy colors, easy on the eyes. Goes with nuance-dark-syntax.",
   "license": "MIT",
-  "repository": "https://github.com/atom/atom-dark-ui",
+  "repository": "https://github.com/polygonix/nuance-dark-ui",
   "engines": {
     "atom": ">0.40.0"
   }
